--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin-ext" rel="stylesheet">
 
-  <link rel="stylesheet" href="http://plygig.com/tv/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="ply/bootstrap.min.css">
   <!--FontAwesome nin css -->
-  <link rel="stylesheet" href="http://plygig.com/tv/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="ply/font-awesome.min.css">
   <!--Owl carousel css-->
-  <link rel="stylesheet" href="http://plygig.com/tv/assets/css/owl.carousel.css">
+  <link rel="stylesheet" href="ply/owl.carousel.css">
   <!-- <link rel="stylesheet" href="flowplayer/skin/skin.css"> -->
   <!--Style css-->
-  <link rel="stylesheet" href="http://plygig.com/tv/style.css">
+  <link rel="stylesheet" href="ply/style.css">
 
   <!--jquery-1.12.0.min.js-->
-  <script src="http://plygig.com/tv/assets/js/vendor/jquery-1.12.0.min.js"></script>
+  <script src="ply/jquery-1.12.0.min.js"></script>
   <!-- <script src="flowplayer/flowplayer.min.js"></script> -->
 
   <!--[if lt IE 9]>
@@ -346,7 +346,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
-            &copy; Copyright By LiveCast || 2019 || Made with ♥ by Movply
+            &copy; Copyright TvBD || 2019 || Made with ♥ by Shawon
           </p>
         </div>
       </div>
@@ -354,16 +354,16 @@
   </footer>
 
   <!--Bootstrap min js-->
-  <script src="http://plygig.com/tv/assets/js/bootstrap.min.js"></script>
+  <script src="ply/bootstrap.min.js"></script>
   <!--Owl filter js-->
-  <script src="http://plygig.com/tv/assets/js/jquery.owl-filter.js"></script>
+  <script src="ply/jquery.owl-filter.js"></script>
   <!--Owl carousel min js-->
-  <script src="http://plygig.com/tv/assets/js/owl.carousel.min.js"></script>
+  <script src="ply/owl.carousel.min.js"></script>
   <!--Main js-->
-  <script src="http://plygig.com/tv/assets/js/main.js"></script>
+  <script src="ply/main.js"></script>
 
 </body>
 
 
-<!-- Mirrored from plygig.com/tv/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 13 Jan 2019 14:24:55 GMT -->
+
 </html>
