--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin-ext" rel="stylesheet">
 
-  <link rel="stylesheet" href="ply/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <!--FontAwesome nin css -->
-  <link rel="stylesheet" href="ply/font-awesome.min.css">
+  <link rel="stylesheet" href="font-awesome.min.css">
   <!--Owl carousel css-->
-  <link rel="stylesheet" href="ply/owl.carousel.css">
+  <link rel="stylesheet" href="owl.carousel.css">
   <!-- <link rel="stylesheet" href="flowplayer/skin/skin.css"> -->
   <!--Style css-->
-  <link rel="stylesheet" href="ply/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--jquery-1.12.0.min.js-->
-  <script src="ply/jquery-1.12.0.min.js"></script>
+  <script src="jquery-1.12.0.min.js"></script>
   <!-- <script src="flowplayer/flowplayer.min.js"></script> -->
 
   <!--[if lt IE 9]>
@@ -354,13 +354,13 @@
   </footer>
 
   <!--Bootstrap min js-->
-  <script src="ply/bootstrap.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <!--Owl filter js-->
-  <script src="ply/jquery.owl-filter.js"></script>
+  <script src="jquery.owl-filter.js"></script>
   <!--Owl carousel min js-->
-  <script src="ply/owl.carousel.min.js"></script>
+  <script src="owl.carousel.min.js"></script>
   <!--Main js-->
-  <script src="ply/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
