--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
                 <div class="item bangla">
               <div class="item_content">
-                <a herf="#" onclick="tv.location.href='desports.html'"><img src="dsport.jpg" class="img-responsive"></a>
+                <a herf="#" onclick="tv.location.href='desports.html'"><img src="dsport.png" class="img-responsive"></a>
               </div>
             </div>
             
