--- a/gazi-tv2.html
+++ b/gazi-tv2.html
@@ -2,5 +2,5 @@
 style="visibility: visible;" type="application/x-shockwave-flash" width="650">
 <param value="true" name="allowFullScreen"><param value="always" name="allowScriptAccess">
 <param value="opaque" name="wmode">
-  <param value="autoPlay=true&amp;src='http://172.28.28.112/live/antbd1006/index.m3u8'&amp;streamType=live&amp;scaleMode=letterbox&amp;plugin_hls=//www.hlsplayer.net/player/grindplayer/flashlsOSMF.swf&amp;hls_debug=false&amp;hls_debug2=false&amp;hls_minbufferlength=-1&amp;hls_lowbufferlength=2&amp;hls_maxbufferlength=60&amp;hls_startfromlowestlevel=false&amp;hls_seekfromlowestlevel=false&amp;hls_live_flushurlcache=false&amp;hls_seekmode=ACCURATE&amp;hls_capleveltostage=false&amp;hls_maxlevelcappingmode=downscale" 
+  <param value="autoPlay=true&amp;src=http://172.28.28.112/live/antbd1006/index.m3u8&amp;streamType=live&amp;scaleMode=letterbox&amp;plugin_hls=//www.hlsplayer.net/player/grindplayer/flashlsOSMF.swf&amp;hls_debug=false&amp;hls_debug2=false&amp;hls_minbufferlength=-1&amp;hls_lowbufferlength=2&amp;hls_maxbufferlength=60&amp;hls_startfromlowestlevel=false&amp;hls_seekfromlowestlevel=false&amp;hls_live_flushurlcache=false&amp;hls_seekmode=ACCURATE&amp;hls_capleveltostage=false&amp;hls_maxlevelcappingmode=downscale" 
          name="flashvars" id="playerayer"></object>
